fix: fix notification div content overflow on small screens

--- a/src/components/navigation-bar/css/navigation.css
+++ b/src/components/navigation-bar/css/navigation.css
@@ -362,7 +362,7 @@ div.notification{
   display:block;
   text-align: center;
   width: 80%;
-  height:130px;
+  height:fit-content;
   padding: 30px 20px 20px 20px;
   margin: 0 auto;
   position: sticky;
@@ -378,7 +378,7 @@ div.notification{
     display:block;
     text-align: center;
     width: 300px;
-    height:200px;
+    height:fit-content;
     padding: 20px;
     margin: 0 auto;
     position: sticky;
